--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <br>
               <h4>Follow us on LinkedIn: <span><i class="fa fa-linkedin" aria-hidden="true"></i><a href="https://www.linkedin.com/company/start-here-plan/">StartHere</a></span></h4>
               <br>
-              <h4>Our GitHub profile: <span><i class="fa fa-github" aria-hidden="true"></i><a href="#">StartHere</a></span></h4>
+              <h4>Our GitHub profile: <span><i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/start-here-plan">StartHere</a></span></h4>
             </div>
           </div>
         </div>
